# Generative-AI

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: 1.Langchain.ipynb  2.Tools.ipynb  3.Agent.ipynb  4.AgentMultipleTools.ipynb  5.messages.ipynb  6.StructuredOutput.ipynb  7.memory.ipynb  8.Middleware.ipynb
